# mcq-generator-demo

./: pyproject.toml
mcq_generator/: app.py
